Changing the game name to Battle Bombs

--- a/src/platform/android/res/values/strings.xml
+++ b/src/platform/android/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Bomber Party</string>
+    <string name="app_name">Battle Bombs</string>
 
     <!-- Activity Main -->
     <string name="start_quick_match">QUICK MATCH</string>
