Change battle-bombs to battlebombs

--- a/src/platform/ios/en.lproj/Localizable.strings
+++ b/src/platform/ios/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 /* 
   Localizable.strings
-  battle-bombs
+  battlebombs
 
   Created by Stephen Gowen on 3/1/14.
   Copyright (c) 2014 Techne Games. All rights reserved.
