--- a/src/platform/ios/en.lproj/Localizable.strings
+++ b/src/platform/ios/en.lproj/Localizable.strings
@@ -27,3 +27,6 @@
 "invalid_username_title" = "Invalid Username";
 "invalid_username_message" = "Please enter a username between 3 and 15 characters.";
 "invalid_username_cancel" = "OK";
+
+// JSON Request Message
+"json_request_progress_message" = "One Moment...";
