Adding Down for Maintenance logic (if/when I need to take down the server for whatever reason)

--- a/src/platform/android/res/values/strings.xml
+++ b/src/platform/android/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="update_required_message">A new version of Battle Bombs is available, please update before playing online.</string>
     <string name="update_required_cancel">OK</string>
 
+    <!-- Down for Maintenance Dialog -->
+    <string name="down_for_maintenance_title">Down for Maintenance</string>
+    <string name="down_for_maintenance_message">Techne Games is down for maintenance, but will be back online soon.\nFeel free to enjoy the offline mode in the meantime.</string>
+    <string name="down_for_maintenance_cancel">OK</string>
+
     <!-- Connection Error Dialog -->
     <string name="connection_error_title">Connection Error</string>
     <string name="connection_error_message">Your device is unable to connect to Techne Games. Please check your connection and try again.</string>
