--- a/src/platform/android/res/values/strings.xml
+++ b/src/platform/android/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Battle Bombs Beta</string>
+    <string name="app_name">Battle Bombs</string>
 
     <!-- Update Required Dialog -->
     <string name="update_required_title">Update Required</string>
